K8Manifest/webapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: webapp
  labels:
    app: employees
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: employees
      version: v1
  template:
    metadata:
      labels:
        app: employees
        version: v1
    spec:
      containers:
        - name: websrv-images
          image: 699068936389.dkr.ecr.us-east-1.amazonaws.com/websrv-images:v0.1
          ports:
            - containerPort: 8080
