K8Manifest/webapp/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app
  namespace: webapp
spec:
  containers:
    - name: websrv-images
      image: 699068936389.dkr.ecr.us-east-1.amazonaws.com/websrv-images:v0.1
      ports:
        - containerPort: 8080
