K8Manifest/webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: webapp
  labels:
    app: employees
    version: v1
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30003
  selector:
    app: employees
    version: v1
