K8Manifest/webapp/servicev2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-v2
  namespace: employees
  labels:
    app: employees
    version: v2
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30000
  selector:
    app: employees
    version: v2
